name:                btcsim
version:             0.1.0.0
synopsis:            Cute little Bitcoin network/blockchain simulator
homepage:            http://github.com/WraithM/btcsim#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Wraith
maintainer:          wraithm@gmail.com
copyright:           2016 Bitnomial, Inc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N

  exposed-modules: Data.Blockchain
                 , Network.ToyBitcoin

  build-depends: async
               , base >= 4.7 && < 5
               , base16-bytestring
               , binary
               , bytestring
               , cryptohash
               , io-streams
               , transformers
               , random

executable btcsim
  hs-source-dirs:      exec
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       
    base, 
    btcsim,
    random

source-repository head
  type:     git
  location: https://github.com/WraithM/btcsim
